# axosynaptic

./: AUTHORS  ChangeLog  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac
data/: Makefile.am  axosynaptic.1  org.mate.axosynaptic.desktop.in  org.mate.axosynaptic.xml
po/: POTFILES.in  POTFILES.skip  ar.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  la.po  lt.po  lv.po  ml.po  nb.po  nds.po  ne.po  nl.po  nn.po  oc.po  pl.po  pt.po  (+13 more)
src/core/: Makefile.am  common-actions.vala  config-service.vala  data-sink.vala  dbus-service.vala  desktop-file-service.vala  match.vala  plugin.vala  query.vala  relevancy-backend-zg.vala  relevancy-service.vala  result-set.vala  utils.vala  volume-service.vala
src/plugins/: Makefile.am  calculator-plugin.vala  chat-actions-plugin.vala  chromium-plugin.vala  command-plugin.vala  desktop-file-plugin.vala  devhelp-search.vala  dictionary.vala  directory-plugin.vala  file-op-plugin.vala  gnome-session-plugin.vala  gtk-bookmarks-plugin.vala  hello-world-plugin.vala  hybrid-search-plugin.vala  imgur-plugin.vala  launchpad-plugin.vala  locate-plugin.vala  opensearch.vala  pastebin-plugin.vala  pidgin-plugin.vala  rhythmbox-plugin.vala  screensaver-plugin.vala  selection-plugin.vala  ssh-plugin.vala  system-management.vala  test-slow-plugin.vala  tracker-plugin.vala  xnoise-media-player-plugin.vala  zeal-plugin.vala  zeitgeist-plugin.vala  zeitgeist-related.vala
src/ui/: Makefile.am  axosynaptic-main.vala  category.vala  controller.vala  icon-cache-service.vala  interfaces.vala  keybindings.vala  model.vala  settings.vala  utils.vala  view-base.vala  view-default.vala  view-doish.vala  view-essential.vala  view-side-doish.vala  view-virgilio.vala  widgets-matchlistview.vala  widgets.vala
